; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-netlink/extr_test-netlink.c_test_multiple.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-netlink/extr_test-netlink.c_test_multiple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_multiple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_multiple() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i64 @sd_netlink_open(i32** %1)
  %4 = icmp sge i64 %3, 0
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert_se(i32 %5)
  %7 = call i64 @sd_netlink_open(i32** %2)
  %8 = icmp sge i64 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert_se(i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32* @sd_netlink_unref(i32* %11)
  store i32* %12, i32** %1, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = call i32* @sd_netlink_unref(i32* %13)
  store i32* %14, i32** %2, align 8
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @sd_netlink_open(i32**) #1

declare dso_local i32* @sd_netlink_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
